Added localizations for tagline and frontpage welcome message

--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -23,6 +23,11 @@ bn:
     view_discussion: আলোচনা দেখুন
     view_release: রিলিজ দেখুন
     view_term: টার্ম দেখুন
+  footnote:
+    msg_1_html: Homosaurus.org একটি লিঙ্কযুক্ত ডেটা পরিষেবা যা<a href="https://www.digitaltransgenderarchive.net/"> ডিজিটাল ট্রান্সজেন্ডার আর্কাইভ</a> দ্বারা রক্ষণাবেক্ষণ করা হয়
+    msg_2_html: এই শব্দভাণ্ডারটি<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.bn"> ক্রিয়েটিভ কমন্স অ্যাট্রিবিউশন-অ-বাণিজ্যিক-না ডেরিভেটিভস ৪. ০ </a> আন্তর্জাতিক লাইসেন্সের অধীনে উপলব্ধ করা হয়েছে ।
+  homepage:
+    welcome_html: '<p>হোমোসরাস-এ স্বাগতম! হোমোসরাস হল লেসবিয়ান, গে, বাইসেক্সুয়াল, ট্রান্সজেন্ডার এবং কুইয়ার (LGBTQ) পরিভাষার একটি আন্তর্জাতিক লিঙ্কযুক্ত ডেটা শব্দভাণ্ডার । এই শব্দভাণ্ডারটি বিস্তৃত বিষয় শব্দভাণ্ডারগুলির সহচর হিসাবে কাজ করার উদ্দেশ্যে তৈরি করা হয়েছে, যেমন লাইব্রেরি অফ কংগ্রেস সাবজেক্ট শিরোনাম । গ্রন্থাগার, সংরক্ষণাগার, জাদুঘর এবং অন্যান্য প্রতিষ্ঠানগুলিকে তাদের এলজিবিটিকিউ সংস্থানগুলির আবিষ্কারযোগ্যতা বাড়িয়ে এলজিবিটিকিউ গবেষণা সমর্থন করার জন্য হোমোসরাস ব্যবহার করতে উৎসাহিত করা হয় ।</p><p>আপনি যদি কিছু হোমোসরাস সোয়াগ (swag) কিনতে আগ্রহী হন, তাহলে অনুগ্রহ করে আমাদের <a href="https://homosaurus.threadless.com">অনলাইন শপ</a> দেখুন । সমস্ত আয় প্রকল্পটিকে সমর্থন করার জন্য ব্যবহার করা হয় বা LGBTQ+ সংস্থাকে দান করা হয় । </p> <p>আপনি যদি হোমোসরাস ব্যবহার করেন তবে আমরা আপনার কাছ থেকে শুনতে চাই! আপনি কীভাবে এই শব্দভাণ্ডারটি ব্যবহার করছেন তা আমাদের জানাতে এবং আপনার যে কোনও প্রতিক্রিয়া জানাতে অনুগ্রহ করে আমাদের সাথে <a href="%{contact_path}">যোগাযোগ করুন</a> । এছাড়াও আমাদের Google গ্রুপ কমিউনিটিতে যোগ দিতে পারেন: <a href="https://groups.google.com/g/homoitcommunity">https://groups.google.com/g/homoitcommunity</a></p>'
   languages:
     bn: বাংলা
     en: ইংরেজি
@@ -44,6 +49,7 @@ bn:
     search: অনুসন্ধান
     vocab: পারিভাষিক শব্দভাণ্ডার
   misc:
+    tagline: একটি আন্তর্জাতিক LGBTQ+ লিঙ্কড ডেটা শব্দভাণ্ডার
     translation_needed: অনুবাদ প্রয়োজন
   release:
     label: মুক্তিপ্রাপ্ত সংস্করণ
@@ -80,6 +86,3 @@ bn:
       show_visible: দৃশ্যমান পরিভাষাগুলি দেখান
     current_terms: বর্তমান পরিভাষা তালিকা
     label: হোমোসরাস শব্দভান্ডারের শব্দাবলি
-  footnote:
-    msg_1_html: Homosaurus.org একটি লিঙ্কযুক্ত ডেটা পরিষেবা যা<a href="https://www.digitaltransgenderarchive.net/"> ডিজিটাল ট্রান্সজেন্ডার আর্কাইভ</a> দ্বারা রক্ষণাবেক্ষণ করা হয় 
-    msg_2_html: এই শব্দভাণ্ডারটি<a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.bn"> ক্রিয়েটিভ কমন্স অ্যাট্রিবিউশন-অ-বাণিজ্যিক-না ডেরিভেটিভস ৪. ০ </a> আন্তর্জাতিক লাইসেন্সের অধীনে উপলব্ধ করা হয়েছে ।
