--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -26,6 +26,11 @@ hi:
     view_discussion: चर्चा देखें
     view_release: रिलीज़ देखें
     view_term: शब्द देखें
+  footnote:
+    msg_1_html: Homosaurus.org एक लिंक्ड डेटा सेवा है जिसका रखरखाव <a href="https://www.digitaltransgenderarchive.net/"> डिजिटल ट्रांसजेंडर आर्काइव</a> द्वारा किया जाता है
+    msg_2_html: यह शब्दावली <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.hi">क्रिएटिव कॉमन्स श्रेय-गैरवाणिज्यिक-व्युत्पन्ननहीं 4.0 अंतर्राष्ट्रीय  (CC BY NC-ND 4.0)</a> लाइसेंस के तहत उपलब्ध कराई गई है।
+  homepage:
+    welcome_html: '<p>होमोसौरस में आपका स्वागत है! होमोसौरस लेस्बियन, गे, बाइसेक्सुअल, ट्रांसजेंडर और क्वियर (LGBTQ) शब्दों की एक अंतरराष्ट्रीय लिंक की गई डेटा शब्दावली है। इस शब्दावली का उद्देश्य व्यापक विषय शब्द शब्दावली के साथी के रूप में कार्य करना है, जैसे कि लाइब्रेरी ऑफ़ कांग्रेस सब्जेक्ट हेडिंग्स। पुस्तकालयों, अभिलेखागार, संग्रहालयों और अन्य संस्थानों को अपने LGBTQ संसाधनों की खोज क्षमता को बढ़ाकर LGBTQ अनुसंधान का समर्थन करने के लिए होमोसौरस का उपयोग करने के लिए प्रोत्साहित किया जाता है।</p><p> अगर आप कुछ होमोसॉरस स्वैग खरीदना चाहते हैं, तो कृपया हमारी <a href="https://homosaurus.threadless.com">ऑनलाइन दुकान</a> पर जाएँ। सभी आय का उपयोग परियोजना का समर्थन करने के लिए किया जाता है या एलजीबीटीक्यू+ संगठनों को दान किया जाता है।</p><p>यदि आप होमोसॉरस का उपयोग कर रहे हैं, तो हम आपसे सुनना चाहते हैं! कृपया <a href="%{contact_path}">हमसे संपर्क</a> करके हमें बताएँ कि आप इस शब्दावली का इस्तेमाल कैसे कर रहे हैं और आपके पास जो भी फ़ीडबैक हो सकता है, उसे शेयर करें। कोई भी हमारे Google समूह समुदाय में शामिल हो सकता है: <a href="https://groups.google.com/g/homoitcommunity">https://groups.google.com/g/homoitcommunity</a></p>'
   languages:
     bn: बंगाली
     en: अंग्रेजी
@@ -47,6 +52,7 @@ hi:
     search: खोज
     vocab: पारिभाषिक शब्दावली
   misc:
+    tagline: एक अंतर्राष्ट्रीय LGBTQ+ लिंक्ड डेटा शब्दावली
     translation_needed: अनुवाद आवश्यक
   release:
     label: जारी किया गया संस्करण
@@ -83,6 +89,3 @@ hi:
       show_visible: दृश्यमान शर्तें दिखाएँ
     current_terms: शर्तों की वर्तमान सूची
     label: होमोसॉरस शब्दावली शब्द
-  footnote:
-    msg_1_html: Homosaurus.org एक लिंक्ड डेटा सेवा है जिसका रखरखाव <a href="https://www.digitaltransgenderarchive.net/"> डिजिटल ट्रांसजेंडर आर्काइव</a> द्वारा किया जाता है
-    msg_2_html: यह शब्दावली <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/deed.hi">क्रिएटिव कॉमन्स श्रेय-गैरवाणिज्यिक-व्युत्पन्ननहीं 4.0 अंतर्राष्ट्रीय  (CC BY NC-ND 4.0)</a> लाइसेंस के तहत उपलब्ध कराई गई है। 
