--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,6 +23,11 @@ en:
     view_discussion: View Discussion
     view_release: View Release
     view_term: View Term
+  footnote:
+    msg_1_html: Homosaurus.org is a linked data service maintained by the <a href="https://www.digitaltransgenderarchive.net/">Digital Transgender Archive </a>
+    msg_2_html: This vocabulary is made available under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International license (CC BY NC-ND 4.0)</a>
+  homepage:
+    welcome_html: '<p>Welcome to the Homosaurus! The Homosaurus is an international linked data vocabulary of Lesbian, Gay, Bisexual, Transgender, and Queer (LGBTQ) terms. This vocabulary is intended to function as a companion to broad subject term vocabularies, such as the Library of Congress Subject Headings. Libraries, archives, museums, and other institutions are encouraged to use the Homosaurus to support LGBTQ research by enhancing the discoverability of their LGBTQ resources.</p><p>If you are interested in purchasing some Homosaurus swag, please visit our <a href="https://homosaurus.threadless.com">online shop</a>. All proceeds are used to support the project or are donated to LGBTQ+ organizations.</p><p>If you are using the Homosaurus, we want to hear from you! Please <a href="%{contact_path}">contact us</a> to let us know how you are using this vocabulary and share any feedback you might have. One can also join our Google Group community at: <a href="https://groups.google.com/g/homoitcommunity">https://groups.google.com/g/homoitcommunity</a></p>'
   languages:
     bn: Bengali
     en: English
@@ -46,6 +51,7 @@ en:
     search: Search
     vocab: Vocabulary
   misc:
+    tagline: An International LGBTQ+ Linked Data Vocabulary
     translation_needed: Translation needed
   release:
     label: Release
@@ -80,6 +86,3 @@ en:
       show_visible: Show Visible Terms
     current_terms: Current Term List
     label: Homosaurus Vocabulary Terms
-  footnote:
-    msg_1_html: Homosaurus.org is a linked data service maintained by the <a href="https://www.digitaltransgenderarchive.net/">Digital Transgender Archive </a>
-    msg_2_html:  This vocabulary is made available under a <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/">Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International license (CC BY NC-ND 4.0)</a>
