Added localizations for contacts page

--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -1,5 +1,12 @@
 ---
 bn:
+  contact:
+    email: আপনার ইমেইল
+    message: আপনার বার্তা যোগ করুন
+    message_html: হোমোসরাসে স্বাগতম! সমকামী, সমকামী, উভকামী, ট্রান্সজেন্ডার এবং কুইয়ার (LGBTQ) পদগুলির একটি আন্তর্জাতিক লিঙ্কযুক্ত ডেটা শব্দভাণ্ডার হল হোমোসরাস। এই শব্দভান্ডারটি ইউনাইটেড স্টেটস লাইব্রেরি অফ কংগ্রেসের বিষয় শিরোনামের মতো বিস্তৃত বিষয়ের পদগুলির শব্দভান্ডারের পরিপূরক হিসাবে কাজ করার উদ্দেশ্যে। আমরা লাইব্রেরি, আর্কাইভ, জাদুঘর এবং অন্যান্য প্রতিষ্ঠানগুলিকে তাদের LGBTQ সংস্থানগুলির আবিষ্কারযোগ্যতা উন্নত করে LGBTQ গবেষণাকে সমর্থন করার জন্য হোমোসরাস ব্যবহার করার জন্য আমন্ত্রণ জানাই৷</br>আপনি যদি কোনও হোমোসরাস পণ্যদ্রব্য কিনতে আগ্রহী হন তবে আমাদের অনলাইন স্টোরে যান। সমস্ত আয় প্রকল্পটিকে সমর্থন করার জন্য ব্যবহার করা হয় বা LGBTQ+ সংস্থাগুলিতে দান করা হয়।
+    name: আপনার নাম
+    send: পাঠান
+    topic: বিষয়
   discussion:
     add_topic: নতুন বিষয় যোগ করুন
     add_vote: ভোট যোগ করুন
