--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,12 @@
 ---
 en:
+  contact:
+    email: Your Email
+    message: Your Message
+    message_html: If you are using the Homosaurus, we want to hear from you! Please reach out to let us know how you are using this vocabulary and share any feedback you might have. We are also open to having new members join our Editorial Board so please let us know if that is something you are interested in.</br>The Homosaurus is a work in progress and we welcome suggestions for new terms to be added or changes to be made within the vocabulary. The Homosaurus Editorial Board oversees the upkeep of the vocabulary and will consider all proposed terms and changes on a quarterly basis.
+    name: Your Name
+    send: Send
+    topic: Topic
   discussion:
     add_topic: Add New Topic
     add_vote: Add Vote
