--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,5 +1,12 @@
 ---
 fr:
+  contact:
+    email: Votre adresse courriel
+    message: Votre message
+    message_html: Si vous utilisez l'Homosaurus, nous aimerions avoir de vos nouvelles ! N'hésitez pas à nous contacter pour nous dire comment vous utilisez ce thésaurus et nous faire part de vos commentaires. Nous sommes également ouvert·es à l'arrivée de nouveaux membres au sein de notre comité éditorial, alors n'hésitez pas à nous faire savoir si cela vous intéresse.<br/>L’Homosaurus est en évolution constante et nous accueillons volontiers les suggestions d'ajout de nouveaux termes ou de modifications à apporter au thésaurus. Le comité éditorial de l’Homosaurus supervise les mises à jour et examinera tous les termes et les changements proposés sur une base trimestrielle.
+    name: Votre nom
+    send: Envoyer
+    topic: Sujet
   discussion:
     add_topic: Ajouter un nouveau sujet
     add_vote: Ajouter un vote
