--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1,5 +1,12 @@
 ---
 hi:
+  contact:
+    email: आपका ईमेल
+    message: आपका संदेश
+    message_html: होमोसॉरस में आपका स्वागत है! होमोसॉरस समलैंगिक, समलैंगिक, उभयलिंगी, ट्रांसजेंडर और क्वीर (एलजीबीटीक्यू) शब्दों की एक अंतरराष्ट्रीय जुड़ी हुई डेटा शब्दावली है। इस शब्दावली का उद्देश्य व्यापक विषय शब्दों की शब्दावली के पूरक के रूप में कार्य करना है, जैसे कि यूनाइटेड स्टेट्स लाइब्रेरी ऑफ कांग्रेस के विषय शीर्षक। हम पुस्तकालयों, अभिलेखागारों, संग्रहालयों और अन्य संस्थानों को उनके एलजीबीटीक्यू संसाधनों की खोज क्षमता में सुधार करके एलजीबीटीक्यू अनुसंधान का समर्थन करने के लिए होमोसॉरस का उपयोग करने के लिए आमंत्रित करते हैं।</br>यदि आप कोई होमोसॉरस माल खरीदने में रुचि रखते हैं, तो हमारे ऑनलाइन स्टोर पर जाएँ। सभी आय का उपयोग परियोजना का समर्थन करने के लिए किया जाता है या LGBTQ+ संगठनों को दान किया जाता है।
+    name: आपका नाम
+    send: भेजें
+    topic: विषय
   discussion:
     add_topic: नया विषय जोड़ें
     add_vote: वोट जोड़ें
