--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -1,5 +1,12 @@
 ---
 sv:
+  contact:
+    email: Epost
+    message: Meddelande
+    message_html: Om du använder Homosaurus vill vi gärna höra från dig! Hör gärna av dig för att berätta hur du använder den här vokabulären och dela med dig av all feedback du kan ha. Vi är också öppna för att ta in nya medlemmar i vårt redaktionsråd, så låt oss veta om det är något du är intresserad av. </br>Homosaurus är ett pågående arbete och vi välkomnar förslag på nya termer som kan läggas till eller ändringar som kan göras i vokabulären. Homosaurus-redaktionen övervakar underhållet av vokabulären och kommer att överväga alla föreslagna termer och ändringar kvartalsvis.
+    name: Namn
+    send: Skicka
+    topic: Ämne
   discussion:
     add_topic: Skapa nytt ämne
     add_vote: Lägg till röst
