Added localizations for term relations

--- a/config/locales/bn.yml
+++ b/config/locales/bn.yml
@@ -93,3 +93,18 @@ bn:
       show_visible: দৃশ্যমান পরিভাষাগুলি দেখান
     current_terms: বর্তমান পরিভাষা তালিকা
     label: হোমোসরাস শব্দভান্ডারের শব্দাবলি
+  relations:
+    1: বিবরণ
+    2: পছন্দের আখ্যা
+    3: আখ্যা
+    4: বিকল্প আখ্যা
+    5: পরিবর্তে
+    6: সংকীর্ণ পরিভাষা
+    7: বিস্তৃত পরিভাষা
+    8: সম্পর্কিত পরিভাষা
+    9: LCSH সঠিক মিল
+    10: LCSH এর কাছাকাছি মিল
+    11: সদৃশ শব্দ
+    12: সম্পূর্ণ মিল
+    13: রিডাইরেক্ট করে
+    identifier: শনাক্তকারী
