--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -96,3 +96,18 @@ hi:
       show_visible: दृश्यमान शर्तें दिखाएँ
     current_terms: शर्तों की वर्तमान सूची
     label: होमोसॉरस शब्दावली शब्द
+  relations:
+    1: विवरण
+    2: पसंदीदा लेबल
+    3: लेबल
+    4: वैकल्पिक लेबल
+    5: प्रतिस्थापित
+    6: संकीर्ण शब्द
+    7: व्यापक शब्द
+    8: संबन्धित शब्द
+    9: LCSH सटीक मिलान
+    10: LCSH से करीबी मैच
+    11: समान शब्द
+    12: सटीक जोड़ीदार
+    13: पर रीडायरेक्ट होता है
+    identifier: पहचानकर्ता
