--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -93,3 +93,18 @@ en:
       show_visible: Show Visible Terms
     current_terms: Current Term List
     label: Homosaurus Vocabulary Terms
+  relations:
+    1: Description
+    2: Preferred Label
+    3: Label
+    4: Alternative Label
+    5: Replaced By
+    6: Narrower
+    7: Broader
+    8: Related
+    9: LCSH Exact Match
+    10: LCSH Close Match
+    11: Close Match
+    12: Exact Match
+    13: Redirects to
+    identifier: Identifier
